Bug 330460 - Ambiguous shortcut 'Ctrl+Shift+T' in KMail when inside Kontact.
Summary: Ambiguous shortcut 'Ctrl+Shift+T' in KMail when inside Kontact.
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: mail (other bugs)
Version First Reported In: 4.11.3
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-27 12:03 UTC by quazgar
Modified: 2014-01-28 07:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description quazgar 2014-01-27 12:03:45 UTC
When pressing 'Ctrl+Shift+T' in KMail inside Kontact, an error notification pops up:

> The key sequence 'Ctrl+Shift+T' is ambiguous. Use 'Configure Shortcuts' from the 'Settings'
> menu to solve the ambiguity. No action will be triggered.

There is no other competing shortcut in KMail though.  Because this error only happens for the integrated KMail inside Kontact, not when started separately, I believe it may be that Kontact wants to keep shortcuts unique even across different Kontact applications.

Reproducible: Always

Steps to Reproduce:
1. Open Kontact.
2. Switch to the mail application.
3. Press "Control-Shift-t".
Actual Results:  
Error notification pops up

Expected Results:  
Should open new mail folder tab, no matter what other Kontact apps may have decided for their shortcuts.
Comment 1 Laurent Montel 2014-01-27 13:06:18 UTC
Ok I will investigate it.
Comment 2 quazgar 2014-01-27 19:59:11 UTC
Same behavior on another machine btw, 4.11.2, Gentoo Linux.
Comment 3 Laurent Montel 2014-01-28 07:26:18 UTC
I confirm it.
I need to change shortcut from kmail or korganizer plugins.
Comment 4 Laurent Montel 2014-01-28 07:31:26 UTC
I replaced this shortcut by Ctrl+Shift+O
Regards
Comment 5 Laurent Montel 2014-01-28 07:32:22 UTC
Git commit dc7776fccf105e97663b7d577748a24a0d16b530 by Montel Laurent.
Committed on 28/01/2014 at 07:32.
Pushed by mlaurent into branch 'KDE/4.12'.

Fix Bug 330460 - Ambiguous shortcut 'Ctrl+Shift+T' in KMail when inside Kontact.

FIXED-IN: 4.12.2

M  +1    -1    messagelist/pane.cpp

http://commits.kde.org/kdepim/dc7776fccf105e97663b7d577748a24a0d16b530