Fix Bug 330460 - Ambiguous shortcut 'Ctrl+Shift+T' in KMail when inside Kontact.

FIXED-IN: 4.12.2
BUG: 330460